<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario">

    <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/payment_and_finance"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_of_the_user"
            android:textAlignment="center"
            android:textColor="#DA2013"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,TextSizeCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textColor="#1E3CDF"
                android:textSize="24sp"
                tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="253dp"
                android:layout_height="71dp"
                android:hint="@string/correos"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textColor="#2341E8"
                android:textSize="24sp"
                tools:ignore="HardcodedText,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="261dp"
                android:layout_height="70dp"
                android:hint="@string/contrasenaa"
                android:inputType="textPassword"
                tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:backgroundTint="#203EE4"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:backgroundTint="#353434"
            android:text="@string/regresar"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>