<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/payment_and_finance"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="353dp"
            android:layout_height="68dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:text="@string/inicio_sesión"
            android:textAlignment="textStart"
            android:textColor="#151515"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,TextSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="65dp"
            android:text="@string/email"
            android:textColor="#1934CA"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="282dp"
            android:layout_height="56dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#090909"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="Autofill,MissingConstraints,TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:text="@string/password"
            android:textColor="#1636E8"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="282dp"
            android:layout_height="54dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#121212"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="#B6170C"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            tools:ignore="HardcodedText,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="#1689E4"
        android:text="@string/enter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
