<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/payment_and_finance"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="75dp"
            android:text="@string/nombre_pago"
            android:textColor="#0E27AF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="254dp"
            android:layout_height="54dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/pago"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:text="@string/tipo_pago"
            android:textColor="#0E27B3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText6"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="257dp"
            android:layout_height="51dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:background="#8A8686"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="25dp"
            android:text="@string/fecha"
            android:textColor="#0B23AA"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:ignore="HardcodedText" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="278dp"
            android:layout_height="304dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:background="#D3D3D3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/button5"
            android:layout_width="132dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0E29C1"
            android:text="@string/guarda"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView"
            tools:ignore="HardcodedText,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>